控制台可以执行/op 玩家名 op玩家可以打/gamemode、/give、/tp 等管理指令 兼容java8 启动游戏